[package]
name = "vka"
version = "0.0.0"
edition = "2024"
description = "A minimal vulkan wrapper"
license = "MIT"
documentation = "https://docs.rs/vka"
homepage = "https://github.com/phoshp/vka"
repository = "https://github.com/phoshp/vka"
keywords = ["vulkan", "graphics", "rendering", "low-level"]
categories = ["game-engine", "graphics", "vulkan"]

[dependencies]
anyhow = "1.0.102"
ash = "0.38.0"
ash-window = "0.13.0"
bitflags = "2.11.0"
glam = "0.32.1"
gpu-allocator = "0.28.0"
itertools = "0.14.0"
log = "0.4.29"
parking_lot = "0.12.5"
raw-window-handle = "0.6.2"

[dev-dependencies]
env_logger = "0.11.9"
image = "0.25.10"
winit = "0.30.13"
